Четвертая итерация. Исправлены замечания по ревью